--- a/css/style.css
+++ b/css/style.css
@@ -303,9 +303,72 @@ del {
 }
 
 /* Reviews */
-.Reviews {
-    background-color: #C5DD8B;
-    padding: 50px 0;
+.t-text {
+    margin-top: -50px;
+    text-align: center;
+    margin-bottom: 150px;
+}
+
+.customer-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-left: 250px;
+    padding-right: 250px;
+}
+
+.testimonial {
+    background-color: #fff;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    padding: 20px;
+    margin-bottom: 20px;
+    width: 30%;
+    text-align: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1em;
+    font-weight: bold;
+}
+
+.testimonial p {
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    font-style: italic;
+    font-weight: bold;
+}
+
+.review-stars {
+    font-size: 25px;
+    color: #F9CC16;
+    margin-bottom: 15px;
+}
+
+.author {
+    display: flex;
+    align-items: center;
+}
+
+.author {
+    display: flex;
+    align-items: center;
+}
+
+.author img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.author p {
+    margin: 0;
+    font-weight: lighter;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.review-avg {
+    text-align: center;
+    color: #868686;
+    margin-top: -80px;
 }
 
 /* Footer */
