--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,8 @@ nav {
     line-height: 18px;
     font-family: Arial, Helvetica, sans-serif;
     list-style: none;
+    position: relative;
+    left: -45px;
 }
 
 .cart img{
@@ -427,7 +429,7 @@ del {
 .review-avg {
     text-align: center;
     color: #868686;
-    margin-top: -80px;
+    margin-top: 20px;
 }
 
 .review-stars {
