--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,7 @@
-html, body {
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     font-family: 'Segoe UI', Tahoma, Verdana, sans-serif;
 }
 
@@ -433,6 +436,7 @@ footer {
     color: #ffffff;
     text-align: center;
     padding: 90px 0;
+    margin-top: auto;
 }
 
 .footer-container {
