add to cart counter added

--- a/css/style.css
+++ b/css/style.css
@@ -607,7 +607,41 @@ footer {
 }
 
 .payment-information {
-margin-top: 50px;
+    margin-top: 50px;
+}
+
+form,
+#quantity-container {
+    display: flex;
+    align-items: center;
+}
+
+#quantity-container {
+    margin-right: 10px;
+}
+
+#increment,
+#decrement,
+#quantity {
+    width: 44px;
+    height: 44px;
+    background-color: transparent;
+    color: #000000;
+    border: 1px solid #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    padding: 0;
+    font-size: 16px;
+}
+
+#decrement {
+    border-right: none;
+}
+
+#increment {
+    border-left: none;
 }
 
 .container,
